Add perm gen GC options to windows service installer
git-svn-id: https://subversion.assembla.com/svn/mdss@2575 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: 70f52c4a84cf6fc13cd77f81f1268f10b0a791e4